--- a/package.json
+++ b/package.json
@@ -4,16 +4,13 @@
   "private": true,
   "dependencies": {
     "@mobx-devtools/tools": "^0.0.4",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "mobx": "^6.9.0",
-    "mobx-react": "^7.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-draggable": "^4.4.5",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "mobx": "^6.13.1",
+    "mobx-react": "^9.1.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^4.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
